# AltitudeControlAlgorithm

./: CMakeLists.txt  Control Algorithm.code-workspace  README.md  header.h  main.cpp
data/: Alift.csv  Blift.csv  OptimalTrajectory.csv  Set1.txt  cent.csv  control.csv  cpuTime.csv  memoryUse.csv  nomState.csv  reference.csv  state.csv
include/: controller.h  controllerB.h  dynamics.h  helpers.h  parameters.h  rbf.h  simulate.h
src/: CMakeLists.txt  controller.cpp  controllerB.cpp  dynamics.cpp  helpers.cpp  rbf.cpp  simulate.cpp
